Fixed the offscreen edit pane problem, and added sensible margins and Bootstrap classes. Added PUT-based update operation of existing segments.

--- a/src/static/languishes.less
+++ b/src/static/languishes.less
@@ -110,10 +110,12 @@ body {
 }
 
 /* The edit pane, over a selection or segment. Floating box for text entry. */
-#clipvis #editpane {
-    fill: white;
-    z-index: 50;
-    display: none;
+#edit-pane .input-label {
+    margin-top: 5px;
+}
+
+#edit-pane .btn {
+    margin-bottom: 5px;
 }
 
 /* Clip List View *************************************************************/
